--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-table": "^7.6.2",
     "reactstrap": "^8.7.1"
   },
   "devDependencies": {
