fix returned enrichedApp to have app rules included in appData

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth0-react-sample",
+  "name": "auth0-react-enriched-auth-sample",
   "version": "0.1.0",
   "private": true,
   "scripts": {
